--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     </header>-->
 
     <main>
-      <!-- Hero-->
-      <!--<section class="hero section">
+       <!--Hero-->
+      <section class="hero section">
         <div class="container hero-content">
           <h1 class="hero-main-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-btn btn" data-modal-open>Замовити послугу</button>
         </div>
-      </section>-->
+      </section>
 
       <!--Advantages-->
       <section class="advantages section-body section">
