--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <!--<header class="header section">
+    <header class="header section">
       <div class="container header__container">
         <nav class="navigation header__navigation">
           <a href="./index.html" class="logo header__logo logo--color-dark link" lang="en"
@@ -130,7 +130,7 @@
           <ul class="workarea-list list">
             <li class="workarea-item">
               <img
-                src="./img/workarea-1.jpg"
+                src="./img/workarea-1-desk-1x.jpg"
                 alt="Руки набирають програмний код, який відображається на планшета"
                 width="370"
                 height="294"
@@ -139,7 +139,7 @@
             </li>
             <li class="workarea-item">
               <img
-                src="./img/workarea-2.jpg"
+                src="./img/workarea-2-desk-1x.jpg"
                 alt="Ноутбук, на екрані якого показані варіанти дисплея мобільних телефонів"
                 width="370"
                 height="294"
@@ -148,7 +148,7 @@
             </li>
             <li class="workarea-item">
               <img
-                src="./img/workarea-3.jpg"
+                src="./img/workarea-3-desk-1x.jpg"
                 alt="Планшет, на дисплеї якого показана палітра всіх можливих тонів кольорів"
                 width="370"
                 height="294"
@@ -165,13 +165,31 @@
           <h2 class="team__title title">Наша команда</h2>
           <ul class="team__card list">
             <li class="team__item">
-              <img
-                src="./img/member-1.jpg"
-                class="team__img"
-                alt="Чоловік"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./img/member-1-desk-1x.jpg 1x, ./img/member-1-desk-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/member-1-tab-1x.jpg 1x, ./img/member-1-tab-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./img/member-1-mob-1x.jpg 1x, ./img/member-1-mob-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./img/member-1-desk-1x.jpg"
+                  class="team__img"
+                  alt="Чоловік"
+                  width="270"
+                  height="260"
+                />
+              </picture>
+
               <div class="team__content">
                 <h3 class="team__title-after">Ігор Дем'яненко</h3>
                 <p class="team__text" lang="en">Product Designer</p>
@@ -208,13 +226,31 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                src="./img/member-2.jpg"
-                class="team__img"
-                alt="Жінка"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./img/member-2-desk-1x.jpg 1x, ./img/member-2-desk-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/member-2-tab-1x.jpg 1x, ./img/member-2-tab-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./img/member-2-mob-1x.jpg 1x, ./img/member-2-mob-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./img/member-2-desk-1x.jpg"
+                  class="team__img"
+                  alt="Жінка"
+                  width="270"
+                  height="260"
+                />
+              </picture>
+
               <div class="team__content">
                 <h3 class="team__title-after">Ольга Рєпіна</h3>
                 <p class="team__text" lang="en">Frontend Developer</p>
@@ -251,13 +287,31 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                src="./img/member-3.jpg"
-                class="team__img"
-                alt="Чоловік"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./img/member-3-desk-1x.jpg 1x, ./img/member-3-desk-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/member-3-tab-1x.jpg 1x, ./img/member-3-tab-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./img/member-3-mob-1x.jpg 1x, ./img/member-3-mob-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./img/member-3-desk-1x.jpg"
+                  class="team__img"
+                  alt="Чоловік"
+                  width="270"
+                  height="260"
+                />
+              </picture>
+
               <div class="team__content">
                 <h3 class="team__title-after">Микола Тарасов</h3>
                 <p class="team__text" lang="en">Marketing</p>
@@ -294,13 +348,30 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                src="./img/member-4.jpg"
-                class="team__img"
-                alt="Чоловік"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./img/member-4-desk-1x.jpg 1x, ./img/member-4-desk-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/member-4-tab-1x.jpg 1x, ./img/member-4-tab-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./img/member-4-mob-1x.jpg 1x, ./img/member-4-mob-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./img/member-4-desk-1x.jpg"
+                  class="team__img"
+                  alt="Чоловік"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <div class="team__content">
                 <h3 class="team__title-after">Михайло Єрмаков</h3>
                 <p class="team__text" lang="en">UI Designer</p>
