Оновлює мобільне меню

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <header class="header section">
-      <!--<div class="container header__container">
+      <div class="container header__container">
         <nav class="navigation header__navigation">
           <a href="./index.html" class="logo header__logo logo--color-dark link" lang="en"
             ><span class="accent-logo">Web</span>Studio</a
@@ -58,18 +58,19 @@
           </li>
         </ul>
         <button type="button" class="menu-open-btn" data-menu-open>
-          <svg class="mob-menu-icon" width="40" height="40">
+          <svg class="mob-menu-icon" width="19" height="19">
                 <use href="./img/icon-menu.svg#icon-open-menu"></use>
               </svg>
         </button>
-      </div> -->
+      </div>
 
       <!-- MENU -->
-      <div class="mob-menu is-hidden" data-menu>
+      <!-- is-hidden -->
+      <div class="mob-menu " data-menu>
         <div class="container">
           <div class="mob-menu-top">
             <button type="button" class="menu-close-btn" data-menu-close>
-              <svg class="mob-menu-icon" width="40" height="40">
+              <svg class="mob-menu-icon" width="19" height="19">
                 <use href="./img/icon-menu.svg#icon-close-menu"></use>
               </svg>
             </button>
@@ -90,34 +91,33 @@
 
           <ul class="mob-connect list">
             <li class="mob-connect-item">
+              <a href="tel:+380961111111" class="mob-connect-link mob-mail link">
+                +38 096 111 11 11</a>
+            </li>
+            <li class="mob-connect-item connect-mob-tel">
               <a href="mailto:info@devstudio.com" class="mob-connect-link mob-tel link">
                 info@devstudio.com</a
-              >
-            </li>
-            <li class="mob-connect-item">
-              <a href="tel:+380961111111" class="mob-connect-link mob-mail link">
-                +38 096 111 11 11</a
               >
             </li>
           </ul>
           <ul class="mob-soc-list">
             <li class="mob-soc-item">
-              <a href="mob-soc-link link" target="_blank" rel="noopener noreferrer nofollow"
+              <a href="" class="mob-soc-link line link" target="_blank" rel="noopener noreferrer nofollow"
                 >Instagram</a
               >
             </li>
             <li class="mob-soc-item">
-              <a href="mob-soc-link link" target="_blank" rel="noopener noreferrer nofollow"
+              <a href="" class="mob-soc-link line link" target="_blank" rel="noopener noreferrer nofollow"
                 >Twitter</a
               >
             </li>
             <li class="mob-soc-item">
-              <a href="mob-soc-link link" target="_blank" rel="noopener noreferrer nofollow"
+              <a href="" class="mob-soc-link line link" target="_blank" rel="noopener noreferrer nofollow"
                 >Facebook</a
               >
             </li>
             <li class="mob-soc-item">
-              <a href="mob-soc-link link" target="_blank" rel="noopener noreferrer nofollow"
+              <a href="" class="mob-soc-link link" target="_blank" rel="noopener noreferrer nofollow"
                 >LinkedIn</a
               >
             </li>
@@ -663,5 +663,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
