Оновлюю хедер та меню

--- a/index.html
+++ b/index.html
@@ -59,36 +59,21 @@
         </ul>
 
         <!-- mobile button -->
-        <button type="button" class="header__menu-btn" aria-expanded="false" aria-controls="mob-menu" data-menu-button>
+        <button
+          type="button"
+          class="header__menu-btn"
+          aria-expanded="false"
+          aria-controls="mob-menu"
+          data-menu-button
+        >
           <svg class="mob-menu-icon" width="19" height="19">
             <use href="./img/icon-menu.svg#icon-open-menu"></use>
           </svg>
         </button>
       </div>
 
-      <!-- mobile-header -->
-      <!-- <div class="mob-header">
-        <div class="container">
-          <a href="./index.html" class="logo mob-header-logo link" lang="en"
-            ><span class="accent-logo">Web</span>Studio</a
-          >
-          <button
-            type="button"
-            class="menu-open-btn"
-            aria-expanded="false"
-            aria-controls="mob-menu"
-            data-menu-button
-          >
-            <svg class="mob-menu-icon" width="19" height="19">
-              <use href="./img/icon-menu.svg#icon-open-menu"></use>
-            </svg>
-          </button>
-        </div>
-      </div> -->
-
       <!-- MENU -->
-      <!-- is-hidden -->
-      <div class="mob-menu " data-menu>
+      <div class="mob-menu" id="mob-menu" data-menu>
         <div class="container mob-menu__container">
           <div class="mob-menu__top">
             <button
