--- a/index.html
+++ b/index.html
@@ -628,8 +628,8 @@
       </div>
     </footer>
 
-    <!--  -->
-    <div class="backdrop is-hidden" data-modal>
+    <!--  is-hidden -->
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
