--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           class="header__menu-btn"
           aria-expanded="false"
           aria-controls="mob-menu"
-          data-menu-button
+          data-menu-open
         >
           <svg class="mob-menu-icon" width="19" height="19">
             <use href="./img/icon-menu.svg#icon-open-menu"></use>
@@ -81,7 +81,7 @@
               class="mob-menu__close-btn"
               aria-expanded="false"
               aria-controls="mob-menu"
-              data-menu-button
+              data-menu-close
             >
               <svg class="mob-menu__icon" width="19" height="19">
                 <use href="./img/icon-menu.svg#icon-close-menu"></use>
@@ -628,8 +628,8 @@
       </div>
     </footer>
 
-    <!--  is-hidden -->
-    <div class="backdrop" data-modal>
+    <!--   -->
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
