--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@
           >
           <ul class="header__list list">
             <li class="header__item">
-              <a href="./index.html" class="header__link link active">Студія</a>
+              <a href="./index.html" class="header__link link">Студія</a>
             </li>
             <li class="header__item">
-              <a href="./portfolio.html" class="header__link link">Портфоліо</a>
+              <a href="./portfolio.html" class="header__link link active">Портфоліо</a>
             </li>
             <li class="header__item">
               <a href="" class="header__link link">Контакти</a>
@@ -90,10 +90,10 @@
             <nav class="mob-menu__nav">
               <ul class="mob-menu__list list">
                 <li class="mob-menu__item">
-                  <a href="./index.html" class="mob-menu__link link active">Студія</a>
+                  <a href="./index.html" class="mob-menu__link link">Студія</a>
                 </li>
                 <li class="mob-menu__item">
-                  <a href="./portfolio.html" class="mob-menu__link link">Портфоліо</a>
+                  <a href="./portfolio.html" class="mob-menu__link link active">Портфоліо</a>
                 </li>
                 <li class="mob-menu__item">
                   <a href="" class="mob-menu__link link">Контакти</a>
@@ -602,5 +602,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
